# vlsi

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  Makefile.am  README_CMAKE  configure.in.in  kdevvlsi.kdevelop  kdevvlsi.lsm  prj.cmake  r.kdevelop  rexec_file.cmake.in
admin/: acinclude.m4.in  am_edit  configure.in.min  cvs.sh  libtool.m4.in
doc/: Makefile.am
doc/en/: Makefile.am  index.docbook
kdevvlsi/: CMakeLists.txt  Doxyfile  Makefile.am  README  kappoptions.cpp  kappoptions.h  kappoptions.ui  kdevvlsi.cpp  kdevvlsi.desktop  kdevvlsi.h  kdevvlsi.qrc  kdevvlsidoc.cpp  kdevvlsidoc.h  kdevvlsiui.rc  kdevvlsiview.cpp  kdevvlsiview.h  kgaview.cpp  kgaview.h  kgaview.ui  kheuristic.cpp  kheuristic.h  kpolygonsview.cpp  kpolygonsview.h  kpolygonsview.ui  kproject.cpp  kproject.h  kvlsigaview.cpp  kvlsigaview.h  kvlsiheuristicview.cpp  kvlsiheuristicview.h  kvlsiprjview.cpp  kvlsiprjview.h  kvlsiviewpolygons.cpp  kvlsiviewpolygons.h  main.cpp  qvlsiapp.h  rfinder.cmake
kdevvlsi/kdevvlsi/: kdevvlsi.cpp  kdevvlsi.h  kdevvlsi.ui  kgaview.cpp  kheuristic.ui  kpolygonsview.h  kproject.ui  qvlsiapp.cpp
kdevvlsi/templates/: cpp_template  header_template
po/: kdevvlsi.pot
rvlsi/: .cvsignore  CMakeLists.txt  Doxyfile  Makefile.am  cga.cpp  cmd2ga.cpp  cmd2ga.h  cmdga.cpp  cmdga.h  edif.cpp  edif.h  files.cpp  files.h  gds.cpp  gds.h  rchromovlsi.cpp  rchromovlsi.h  rgavlsi.cpp  rgavlsi.h  rinstvlsi.cpp  rinstvlsi.h  rvlsiapp.cpp  rvlsiapp.h  rvlsidoc.h  rvlsimacro.cmake  rvlsiprj.h  struct.cpp  struct.h
rvlsi/rvlsi/: CMakeLists.txt  Doxyfile  rchromovlsi.cpp  rchromovlsi.h  rgavlsi.cpp  rinstvlsi.h  rvlsiapp.cpp  rvlsidoc.h  struct.h
